Bug 162884 - German UI and styles: footnote number position should be superscript
Summary: German UI and styles: footnote number position should be superscript
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.2.4.2 release
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:25.2.0 target:24.8.2 target:24...
Keywords: bibisected, bisected, filter:doc, filter:docx, regression
Depends on:
Blocks: DOCX-Footnote-Endnote
  Show dependency treegraph
 
Reported: 2024-09-09 12:16 UTC by Timur
Modified: 2024-10-04 07:26 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of German 25.2 and English 24.2 UI (181.12 KB, image/png)
2024-09-09 12:16 UTC, Timur
Details
FootnoteSubscript.odt: similar English example when not using "Footnote Characters" char-style (11.74 KB, application/vnd.oasis.opendocument.text)
2024-09-09 23:24 UTC, Justin L
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Timur 2024-09-09 12:16:47 UTC
Created attachment 196327 [details]
Screenshot of German 25.2 and English 24.2 UI

Open DOCX with footnote in German UI. 
Expected: footnote number position should be superscript, as in English UI
Experienced: footnote number position is normal.
Reason: "Footnote Characters" style in German is wrong.
Comment 1 Justin L 2024-09-09 23:24:45 UTC
Created attachment 196359 [details]
FootnoteSubscript.odt: similar English example when not using "Footnote Characters" char-style

LibreOffice has its own idea about needing to consistently format all the footnote characters, so it does that with Tools - Footnote Settings by assigning a character style for all "Anchor in footnote".
That style in English is "Footnote Characters".

However, in DOC/X formats, that is handled just like any other text, and is simply assigned a character style - potentially different for each entry.

To reproduce:
1. open FootnoteSubscript.odt. Notice "Anchor in footnote" is "My footnote character" in 48 pt, purple, subscript.
2.) export as DOCX format (or DOC)
3a.) open in LO: Notice it is now using the default "Footnote characters"
3b.) open in MS Word: Notice that the footnote is 48pt, purple, subscript.

This is basically the same thing that is happening for the German document. The applied style format "footnote reference" is mapped to LO "Footnote Characters", but LO's German UI is creating a new char style "Fubnotenzeichen" and applying that to all footnotes.
Comment 2 Justin L 2024-09-09 23:29:52 UTC
A really weak solution would be to solve bug 108765.
Comment 3 Justin L 2024-09-10 20:22:00 UTC
Actually, it looks like a regression in 24.2.4 from
commit 72ea1005b987159a6a59f9379e63321e0b0dd44f
Author: Michael Stahl on Mon May 6 15:58:36 2024 +0200
    tdf#160402 writerfilter: extend StyleMap with all Word styles
Comment 4 Justin L 2024-09-11 20:47:37 UTC
German document to test on: attachment 196379 [details]
Comment 5 Commit Notification 2024-09-12 06:54:45 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3fddae6812f91e5c5f57dacf641f964cd995f2f5

tdf#162884 writerfilter: map to built-in footnote style name

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2024-09-12 12:56:35 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/475d84fd1b8cd4f6307011ed59b5bf4634d27aea

tdf#162884 writerfilter: map to built-in footnote style name

It will be available in 24.8.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2024-09-13 06:17:17 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/623b525654b49621f2d7d3e5fc041224ae48d1f3

tdf#162884 writerfilter: map to built-in footnote style name

It will be available in 24.2.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Timur 2024-09-13 07:47:43 UTC
Thanks Justin. I assume this is done, as I see it working in this case.
Comment 9 Commit Notification 2024-09-30 12:58:57 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/cd141a97c3a42f52e0207875c903433739336eb4

related tdf#162884 writerfilter: map to built-in Internet link, etc.

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2024-10-01 12:55:03 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/bed45e2464bcf16022537309313064d932d96abf

related tdf#162884 writerfilter: map to built-in Internet link, etc.

It will be available in 24.8.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2024-10-04 07:26:02 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/6b05df5ec009f28263873bc215f4bea73c912ea5

related tdf#162884 writerfilter: map to built-in Internet link, etc.

It will be available in 24.2.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.