tdf#162884 writerfilter: map to built-in footnote style name

This partial revert fixes a 24.2.4 regression from
commit 72ea1005b987159a6a59f9379e63321e0b0dd44f
Author: Michael Stahl on Mon May 6 15:58:36 2024 +0200
    tdf#160402 writerfilter: extend StyleMap with all Word styles

Footnote anchor character formatting is controlled by
the character style set in Tools - Footnotes Settings.

The default name of that style is UI dependent,
so only the English UI was importing properly
when the localized name was used in the mapping.

"Footnote Symbol" is the internal name - both the internal name
and the localized name are find-able at the same time,
so the only things that will have a problem are things
that don't connect to the style, but just hold the string name.

The unit test change is also a revert from mstahl's commit.
make CppunitTest_sw_ooxmlexport9 \
    CPPUNIT_TEST_NAME=testTdf109310_endnoteStyleForMSO
and is an indication of another problem that this fixes,
namely that a new Footnote Characters style is added
with each round-trip.

Bug 162884 was only reproducible with a non-English UI.
To reproduce, I compiled with autogen.input
--with-lang=de

Thus no unit test...

Change-Id: I63d37f13f435ff7ec41d6b22d74db83dc495150a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/173141
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>