sw/qa/extras/ooxmlexport/ooxmlexport9.cxx
@@ -690,7 +690,7 @@ CPPUNIT_TEST_FIXTURE(Test, testTdf109310_endnoteStyleForMSO)
     xmlDocUniquePtr pXmlDoc = parseExport(u"word/endnotes.xml"_ustr);
     // Check w:rStyle element has w:val attribute - note that w: is not specified for attribute
     assertXPath(pXmlDoc, "/w:endnotes/w:endnote[@w:id='2']/w:p/w:r[1]/w:rPr/w:rStyle"_ostr, "val"_ostr,
-                u"EndnoteCharacters1"_ustr);
+                u"EndnoteCharacters"_ustr);
 }
 
 CPPUNIT_TEST_FIXTURE(Test, testTdf103389)
